@@ -39,20 +39,62 @@
  *******************************************************************************/
 package org.opennms.core.test.dns;
 
-import java.io.*;
-import java.net.*;
-import java.util.*;
+import java.io.BufferedReader;
+import java.io.DataInputStream;
+import java.io.DataOutputStream;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.InterruptedIOException;
+import java.net.DatagramPacket;
+import java.net.DatagramSocket;
+import java.net.InetAddress;
+import java.net.ServerSocket;
+import java.net.Socket;
+import java.net.SocketTimeoutException;
+import java.net.UnknownHostException;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.StringTokenizer;
 import java.util.concurrent.CountDownLatch;
 
+import org.apache.commons.io.IOUtils;
 import org.opennms.core.utils.InetAddressUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.xbill.DNS.*;
+import org.xbill.DNS.Address;
+import org.xbill.DNS.CNAMERecord;
+import org.xbill.DNS.Cache;
+import org.xbill.DNS.Credibility;
+import org.xbill.DNS.DClass;
+import org.xbill.DNS.DNAMERecord;
+import org.xbill.DNS.ExtendedFlags;
+import org.xbill.DNS.Flags;
+import org.xbill.DNS.Header;
+import org.xbill.DNS.Message;
+import org.xbill.DNS.Name;
+import org.xbill.DNS.NameTooLongException;
+import org.xbill.DNS.OPTRecord;
+import org.xbill.DNS.Opcode;
+import org.xbill.DNS.RRset;
+import org.xbill.DNS.Rcode;
+import org.xbill.DNS.Record;
+import org.xbill.DNS.Section;
+import org.xbill.DNS.SetResponse;
+import org.xbill.DNS.TSIG;
+import org.xbill.DNS.TSIGRecord;
+import org.xbill.DNS.Type;
+import org.xbill.DNS.Zone;
+import org.xbill.DNS.ZoneTransferException;
 
 public class DNSServer {
-	
-	private static final Logger LOG = LoggerFactory.getLogger(DNSServer.class);
-	
+
+    private static final Logger LOG = LoggerFactory.getLogger(DNSServer.class);
+
     private static final int DEFAULT_SOCKET_TIMEOUT = 100;
 
     private final class TCPListener implements Stoppable {
@@ -60,7 +102,8 @@ public class DNSServer {
         private final InetAddress m_addr;
         private ServerSocket m_socket;
         private volatile boolean m_stopped = false;
-        private CountDownLatch m_latch = new CountDownLatch(1);
+        private CountDownLatch m_startingLatch = new CountDownLatch(1);
+        private CountDownLatch m_runningLatch = new CountDownLatch(1);
 
         private TCPListener(final int port, final InetAddress addr) {
             m_port = port;
@@ -68,20 +111,29 @@ public class DNSServer {
         }
 
         @Override
+        public void await() throws InterruptedException {
+            m_startingLatch.await();
+        }
+
+        @Override
         public void run() {
             try {
                 m_socket = new ServerSocket(m_port, 128, m_addr);
                 m_socket.setSoTimeout(DEFAULT_SOCKET_TIMEOUT);
+                m_startingLatch.countDown();
                 while (!m_stopped) {
                     try {
                         final Socket s = m_socket.accept();
                         final Thread t = new Thread(new Runnable() {
                             @Override
                             public void run() {
+                                InputStream is = null;
+                                DataInputStream dataIn = null;
+                                DataOutputStream dataOut = null;
                                 try {
                                     try {
-                                        final InputStream is = s.getInputStream();
-                                        final DataInputStream dataIn = new DataInputStream(is);
+                                        is = s.getInputStream();
+                                        dataIn = new DataInputStream(is);
                                         final int inLength = dataIn.readUnsignedShort();
                                         final byte[] in = new byte[inLength];
                                         dataIn.readFully(in);
@@ -97,7 +149,7 @@ public class DNSServer {
                                         }
                                         LOG.debug("returned response: {}", response == null? null : new Message(response));
                                         if (response != null) {
-                                            final DataOutputStream dataOut = new DataOutputStream(s.getOutputStream());
+                                            dataOut = new DataOutputStream(s.getOutputStream());
                                             dataOut.writeShort(response.length);
                                             dataOut.write(response);
                                         }
@@ -106,20 +158,19 @@ public class DNSServer {
                                     } catch (final IOException e) {
                                         LOG.warn("error while processing socket", e);
                                     } finally {
-                                        try {
-                                            s.close();
-                                        } catch (final IOException e) {
-                                            LOG.warn("unable to close TCP socket", e);
-                                        }
+                                        IOUtils.closeQuietly(s);
+                                        IOUtils.closeQuietly(dataOut);
+                                        IOUtils.closeQuietly(dataIn);
+                                        IOUtils.closeQuietly(is);
                                     }
                                 } catch (final SocketTimeoutException e) {
-                                	LOG.trace("timed out waiting for request", e);
+                                    LOG.trace("timed out waiting for request", e);
                                 }
                             }
                         });
                         t.start();
                     } catch (final SocketTimeoutException e) {
-                    	LOG.trace("timed out waiting for request", e);
+                        LOG.trace("timed out waiting for request", e);
                     }
                 }
             } catch (final IOException e) {
@@ -130,15 +181,15 @@ public class DNSServer {
                 } catch (final IOException e) {
                     LOG.debug("error while closing socket", e);
                 }
-                m_latch.countDown();
+                m_runningLatch.countDown();
             }
         }
-        
+
         @Override
         public void stop() {
             m_stopped = true;
             try {
-                m_latch.await();
+                m_runningLatch.await();
             } catch (final InterruptedException e) {
                 LOG.warn("interrupted while stopping TCP listener", e);
                 Thread.currentThread().interrupt();
@@ -150,11 +201,17 @@ public class DNSServer {
         private final int m_port;
         private final InetAddress m_addr;
         private volatile boolean m_stopped = false;
-        private CountDownLatch m_latch = new CountDownLatch(1);
+        private CountDownLatch m_startingLatch = new CountDownLatch(1);
+        private CountDownLatch m_runningLatch = new CountDownLatch(1);
 
         private UDPListener(int port, InetAddress addr) {
             m_port = port;
             m_addr = addr;
+        }
+
+        @Override
+        public void await() throws InterruptedException {
+            m_startingLatch.await();
         }
 
         @Override
@@ -167,6 +224,7 @@ public class DNSServer {
                 byte[] in = new byte[udpLength];
                 final DatagramPacket indp = new DatagramPacket(in, in.length);
                 DatagramPacket outdp = null;
+                m_startingLatch.countDown();
                 while (!m_stopped) {
                     indp.setLength(in.length);
                     try {
@@ -204,7 +262,7 @@ public class DNSServer {
                         LOG.debug("error while closing socket", e);
                     }
                 }
-                m_latch.countDown();
+                m_runningLatch.countDown();
             }
         }
 
@@ -212,7 +270,7 @@ public class DNSServer {
         public void stop() {
             m_stopped = true;
             try {
-                m_latch.await();
+                m_runningLatch.await();
             } catch (final InterruptedException e) {
                 LOG.warn("interrupted while waiting for server to stop", e);
                 Thread.currentThread().interrupt();
@@ -226,13 +284,13 @@ public class DNSServer {
     final Map<Integer, Cache> m_caches = new HashMap<Integer, Cache>();
     final Map<Name, Zone> m_znames = new HashMap<Name, Zone>();
     final Map<Name, TSIG> m_TSIGs = new HashMap<Name, TSIG>();
-    final List<Integer> m_ports = new ArrayList<Integer>();
-    final List<InetAddress> m_addresses = new ArrayList<InetAddress>();
-    
-    final List<Stoppable> m_activeListeners = new ArrayList<Stoppable>();
+    final List<Integer> m_ports = new ArrayList<>();
+    final List<InetAddress> m_addresses = new ArrayList<>();
+
+    final List<Stoppable> m_activeListeners = new ArrayList<>();
 
     private static String addrport(final InetAddress addr, final int port) {
-    	return InetAddressUtils.str(addr) + "#" + port;
+        return InetAddressUtils.str(addr) + "#" + port;
     }
 
     public DNSServer(final String conffile) throws IOException, ZoneTransferException, ConfigurationException {
@@ -247,17 +305,24 @@ public class DNSServer {
 
         for (final InetAddress addr : m_addresses) {
             for (final Integer port : m_ports) {
-                final UDPListener udpListener = new UDPListener(port, addr);
-                final Thread udpThread = new Thread(udpListener);
-                udpThread.start();
-                m_activeListeners.add(udpListener);
+                try {
+                    final UDPListener udpListener = new UDPListener(port, addr);
+                    final Thread udpThread = new Thread(udpListener);
+                    udpThread.start();
+                    m_activeListeners.add(udpListener);
 
-                final TCPListener tcpListener = new TCPListener(port, addr);
-                final Thread tcpThread = new Thread(tcpListener);
-                tcpThread.start();
-                m_activeListeners.add(tcpListener);
+                    final TCPListener tcpListener = new TCPListener(port, addr);
+                    final Thread tcpThread = new Thread(tcpListener);
+                    tcpThread.start();
+                    m_activeListeners.add(tcpListener);
 
-                LOG.info("listening on {}", addrport(addr, port));
+                    udpListener.await();
+                    tcpListener.await();
+
+                    LOG.info("listening on {}", addrport(addr, port));
+                } catch (final Exception e) {
+                    throw new RuntimeException("Failed to start DNS server on " + InetAddressUtils.str(addr) + "/" + port, e);
+                }
             }
         }
         LOG.debug("finished starting up");
@@ -270,9 +335,9 @@ public class DNSServer {
             LOG.debug("stopped {}", listener);
         }
     }
-    
+
     protected void parseConfiguration(final String conffile) throws ConfigurationException, IOException,
-            ZoneTransferException, UnknownHostException {
+    ZoneTransferException, UnknownHostException {
         final FileInputStream fs;
         final InputStreamReader isr;
         final BufferedReader br;
@@ -306,7 +371,7 @@ public class DNSServer {
                     addSecondaryZone(st.nextToken(), st.nextToken());
                 } else if (keyword.equals("cache")) {
                     final Cache cache = new Cache(st.nextToken());
-                    m_caches.put(new Integer(DClass.IN), cache);
+                    m_caches.put(Integer.valueOf(DClass.IN), cache);
                 } else if (keyword.equals("key")) {
                     final String s1 = st.nextToken();
                     final String s2 = st.nextToken();
@@ -332,7 +397,7 @@ public class DNSServer {
 
     protected void initializeDefaults() throws UnknownHostException {
         if (m_ports.size() == 0) {
-            m_ports.add(new Integer(53));
+            m_ports.add(Integer.valueOf(53));
         }
 
         if (m_addresses.size() == 0) {
@@ -349,11 +414,11 @@ public class DNSServer {
         m_ports.clear();
         m_ports.addAll(ports);
     }
-    
+
     public void addAddress(final InetAddress address) {
         m_addresses.add(address);
     }
-    
+
     public void setAddresses(final List<InetAddress> addresses) {
         if (m_addresses == addresses) return;
         m_addresses.clear();
@@ -387,7 +452,7 @@ public class DNSServer {
         Cache c = m_caches.get(dclass);
         if (c == null) {
             c = new Cache(dclass);
-            m_caches.put(new Integer(dclass), c);
+            m_caches.put(Integer.valueOf(dclass), c);
         }
         return c;
     }
@@ -612,7 +677,7 @@ public class DNSServer {
      * anything. Currently this only happens if this is an AXFR request over
      * TCP.
      */
-    byte[] generateReply(final Message query, final byte[] in, final int length, final Socket s) throws IOException {
+    byte[] generateReply(final Message query, final byte[] in, final int length, final Socket s) {
         final Header header = query.getHeader();
         int maxLength;
         int flags = 0;
