@@ -1,22 +1,22 @@
 /*******************************************************************************
  * This file is part of OpenNMS(R).
  *
- * Copyright (C) 2010-2012 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2012 The OpenNMS Group, Inc.
+ * Copyright (C) 2010-2014 The OpenNMS Group, Inc.
+ * OpenNMS(R) is Copyright (C) 1999-2014 The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
+ * it under the terms of the GNU Affero General Public License as published
  * by the Free Software Foundation, either version 3 of the License,
  * or (at your option) any later version.
  *
  * OpenNMS(R) is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Affero General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
+ * You should have received a copy of the GNU Affero General Public License
  * along with OpenNMS(R).  If not, see:
  *      http://www.gnu.org/licenses/
  *
@@ -28,74 +28,71 @@
 
 package org.opennms.reporting.jasperreports.svclayer;
 
-import net.sf.jasperreports.engine.data.JRBeanCollectionDataSource;
-import net.sf.jasperreports.engine.design.JasperDesign;
-
+import java.io.File;
 import java.io.OutputStream;
 import java.sql.Connection;
 import java.text.SimpleDateFormat;
+import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.HashMap;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.ServiceLoader;
 import java.util.concurrent.Callable;
 
-import net.sf.jasperreports.engine.JREmptyDataSource;
-import net.sf.jasperreports.engine.JRException;
-import net.sf.jasperreports.engine.JRExporterParameter;
-import net.sf.jasperreports.engine.JRParameter;
-import net.sf.jasperreports.engine.JasperCompileManager;
-import net.sf.jasperreports.engine.JasperExportManager;
-import net.sf.jasperreports.engine.JasperFillManager;
-import net.sf.jasperreports.engine.JasperPrint;
-import net.sf.jasperreports.engine.JasperReport;
-import net.sf.jasperreports.engine.export.JRCsvExporter;
-import net.sf.jasperreports.engine.export.JRHtmlExporter;
-import net.sf.jasperreports.engine.export.JRHtmlExporterParameter;
-import net.sf.jasperreports.engine.export.JRXlsExporterParameter;
-import net.sf.jasperreports.engine.export.ooxml.JRXlsxExporter;
-import net.sf.jasperreports.engine.fill.JRGzipVirtualizer;
-import net.sf.jasperreports.engine.fill.JRParameterDefaultValuesEvaluator;
-import net.sf.jasperreports.engine.util.JRLoader;
-import net.sf.jasperreports.engine.xml.JRPrintXmlLoader;
-import net.sf.jasperreports.engine.xml.JRXmlLoader;
-
+import org.apache.commons.jexl2.JexlEngine;
+import org.apache.commons.jexl2.MapContext;
 import org.opennms.api.reporting.ReportException;
 import org.opennms.api.reporting.ReportFormat;
 import org.opennms.api.reporting.ReportService;
-import org.opennms.core.criteria.CriteriaBuilder;
 import org.opennms.api.reporting.parameter.ReportDateParm;
 import org.opennms.api.reporting.parameter.ReportDoubleParm;
 import org.opennms.api.reporting.parameter.ReportFloatParm;
 import org.opennms.api.reporting.parameter.ReportIntParm;
 import org.opennms.api.reporting.parameter.ReportParameters;
 import org.opennms.api.reporting.parameter.ReportStringParm;
+import org.opennms.api.reporting.parameter.ReportTimezoneParm;
 import org.opennms.core.db.DataSourceFactory;
-import org.opennms.core.utils.InetAddressUtils;
 import org.opennms.core.logging.Logging;
 import org.opennms.core.utils.DBUtils;
 import org.opennms.features.reporting.repository.global.GlobalReportRepository;
+import org.opennms.reporting.jasperreports.compiler.CustomJRJdtCompiler;
+import org.opennms.reporting.jasperreports.filter.ParameterFilter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import org.opennms.netmgt.dao.api.AcknowledgmentDao;
-import org.opennms.netmgt.dao.api.AlarmDao;
-import org.opennms.netmgt.dao.api.EventDao;
-import org.opennms.netmgt.model.AckType;
-import org.opennms.netmgt.model.OnmsAcknowledgment;
-import org.opennms.netmgt.model.OnmsAlarm;
-import org.opennms.netmgt.model.OnmsEvent;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.google.common.base.Strings;
 
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
+import net.sf.jasperreports.engine.JREmptyDataSource;
+import net.sf.jasperreports.engine.JRException;
+import net.sf.jasperreports.engine.JRExporterParameter;
+import net.sf.jasperreports.engine.JRExpression;
+import net.sf.jasperreports.engine.JRParameter;
+import net.sf.jasperreports.engine.JRPropertiesUtil;
+import net.sf.jasperreports.engine.JRReport;
+import net.sf.jasperreports.engine.JRSubreport;
+import net.sf.jasperreports.engine.JasperCompileManager;
+import net.sf.jasperreports.engine.JasperExportManager;
+import net.sf.jasperreports.engine.JasperFillManager;
+import net.sf.jasperreports.engine.JasperPrint;
+import net.sf.jasperreports.engine.JasperReport;
+import net.sf.jasperreports.engine.JasperReportsContext;
+import net.sf.jasperreports.engine.SimpleJasperReportsContext;
+import net.sf.jasperreports.engine.design.JRCompiler;
+import net.sf.jasperreports.engine.design.JasperDesign;
+import net.sf.jasperreports.engine.export.JRCsvExporter;
+import net.sf.jasperreports.engine.fill.JRParameterDefaultValuesEvaluator;
+import net.sf.jasperreports.engine.util.JRElementsVisitor;
+import net.sf.jasperreports.engine.util.JRLoader;
+import net.sf.jasperreports.engine.util.JRSaver;
+import net.sf.jasperreports.engine.util.JRVisitorSupport;
+import net.sf.jasperreports.engine.xml.JRPrintXmlLoader;
+import net.sf.jasperreports.engine.xml.JRXmlLoader;
 
-import java.text.ParseException;
-
-import java.util.*;
 /**
  * <p>
  * JasperReportService class.
@@ -113,22 +110,14 @@ public class JasperReportService implements ReportService {
 
     private GlobalReportRepository m_globalReportRepository;
 
-    @Autowired
-    AlarmDao m_alarmDao;
-    
-    @Autowired
-    EventDao m_eventDao;
+    private final List<ParameterFilter> parameterFilters;
 
-    @Autowired
-    AcknowledgmentDao m_ackDao;
-    
-
-    /**
-     * <p>
-     * Constructor for JasperReportService.
-     * </p>
-     */
     public JasperReportService() {
+        parameterFilters = new ArrayList<>();
+        Iterator<ParameterFilter> it =  ServiceLoader.load(ParameterFilter.class).iterator();
+        while (it.hasNext()) {
+            parameterFilters.add(it.next());
+        }
     }
 
     /**
@@ -136,7 +125,7 @@ public class JasperReportService implements ReportService {
      */
     @Override
     public List<ReportFormat> getFormats(String reportId) {
-        List<ReportFormat> formats = new ArrayList<ReportFormat>();
+        List<ReportFormat> formats = new ArrayList<>();
         formats.add(ReportFormat.PDF);
         formats.add(ReportFormat.CSV);
         return formats;
@@ -153,47 +142,32 @@ public class JasperReportService implements ReportService {
             return Logging.withPrefix(LOG4J_CATEGORY, new Callable<ReportParameters>() {
                 @Override public ReportParameters call() throws Exception {
                     final ReportParameters reportParameters = new ReportParameters();
+                    final JasperReport jasperReport = getJasperReport(reportId);
+                    final Map<String, Object> defaultValues = JRParameterDefaultValuesEvaluator.evaluateParameterDefaultValues(jasperReport, new HashMap<>());
 
-                    JasperReport jasperReport = null;
-                    Map<?, ?> defaultValues = null;
-
-                    try {
-                        jasperReport = JasperCompileManager.compileReport(m_globalReportRepository.getTemplateStream(reportId));
-                        defaultValues = JRParameterDefaultValuesEvaluator.evaluateParameterDefaultValues(jasperReport, null);
-                    } catch (final JRException e) {
-                        LOG.error("unable to compile jasper report", e);
-                        throw new ReportException("unable to compile jasperReport", e);
-                    }
 
                     final JRParameter[] reportParms = jasperReport.getParameters();
 
-                    final List<ReportIntParm> intParms = new ArrayList<ReportIntParm>();
+                    final List<ReportIntParm> intParms = new ArrayList<>();
                     reportParameters.setIntParms(intParms);
 
-                    final List<ReportFloatParm> floatParms = new ArrayList<ReportFloatParm>();
+                    final List<ReportFloatParm> floatParms = new ArrayList<>();
                     reportParameters.setFloatParms(floatParms);
 
-                    final List<ReportDoubleParm> doubleParms = new ArrayList<ReportDoubleParm>();
+                    final List<ReportDoubleParm> doubleParms = new ArrayList<>();
                     reportParameters.setDoubleParms(doubleParms);
 
-                    final List<ReportStringParm> stringParms = new ArrayList<ReportStringParm>();
+                    final List<ReportStringParm> stringParms = new ArrayList<>();
                     reportParameters.setStringParms(stringParms);
 
-                    final List<ReportDateParm> dateParms = new ArrayList<ReportDateParm>();
+                    final List<ReportDateParm> dateParms = new ArrayList<>();
                     reportParameters.setDateParms(dateParms);
 
+                    final List<ReportTimezoneParm> timezoneParms = new ArrayList<>();
+                    reportParameters.setTimezoneParms(timezoneParms);
+
                     for (final JRParameter reportParm : reportParms) {
-
-                        if (reportParm.isSystemDefined() == false) {
-
-                            if (reportParm.isForPrompting() == false) {
-                                LOG.debug("report parm {} is not for prompting - continuing", reportParm.getName());
-                                continue;
-                            } else {
-                                LOG.debug("found promptable report parm {}", reportParm.getName());
-
-                            }
-
+                        if (apply(parameterFilters, reportParm)) {
                             if (reportParm.getValueClassName().equals("java.lang.String")) {
                                 LOG.debug("adding a string parm name {}", reportParm.getName());
                                 final ReportStringParm stringParm = new ReportStringParm();
@@ -209,7 +183,7 @@ public class JasperReportService implements ReportService {
                                 if (defaultValues.containsKey(reportParm.getName()) && (defaultValues.get(reportParm.getName()) != null)) {
                                     stringParm.setValue((String) defaultValues.get(reportParm.getName()));
                                 } else {
-                                    stringParm.setValue(new String());
+                                    stringParm.setValue("");
                                 }
                                 stringParms.add(stringParm);
                                 continue;
@@ -227,9 +201,30 @@ public class JasperReportService implements ReportService {
                                 if (defaultValues.containsKey(reportParm.getName()) && (defaultValues.get(reportParm.getName()) != null)) {
                                     intParm.setValue((Integer) defaultValues.get(reportParm.getName()));
                                 } else {
-                                    intParm.setValue(new Integer(0));
+                                    intParm.setValue(0);
                                 }
                                 intParms.add(intParm);
+                                continue;
+                            }
+
+                            if (reportParm.getValueClassName().equals("java.time.ZoneId")) {
+                                LOG.debug("adding a ZoneId parm name {}", reportParm.getName());
+                                final ReportTimezoneParm timezoneParm = new ReportTimezoneParm();
+                                timezoneParm.setName(reportParm.getName());
+                                if (reportParm.getDescription() != null) {
+                                    timezoneParm.setDisplayName(reportParm.getDescription());
+                                } else {
+                                    timezoneParm.setDisplayName(reportParm.getName());
+                                }
+                                if (defaultValues.containsKey(reportParm.getName()) && (defaultValues.get(reportParm.getName()) != null)) {
+                                    final Object timezoneValue = defaultValues.get(reportParm.getName());
+                                    if (timezoneValue instanceof ZoneId) {
+                                        timezoneParm.setValue((ZoneId) timezoneValue);
+                                    } else if (timezoneValue instanceof String && !Strings.isNullOrEmpty((String) timezoneValue)) {
+                                        timezoneParm.setValue((String) timezoneValue);
+                                    }
+                                }
+                                timezoneParms.add(timezoneParm);
                                 continue;
                             }
 
@@ -263,14 +258,17 @@ public class JasperReportService implements ReportService {
                                 if (defaultValues.containsKey(reportParm.getName()) && (defaultValues.get(reportParm.getName()) != null)) {
                                     doubleParm.setValue((Double) defaultValues.get(reportParm.getName()));
                                 } else {
-                                    doubleParm.setValue(new Double(0));
+                                    doubleParm.setValue(Double.valueOf(0));
                                 }
                                 doubleParms.add(doubleParm);
                                 continue;
                             }
 
-                            if (reportParm.getValueClassName().equals("java.util.Date")) {
-                                LOG.debug("adding a java.util.Date parm name {}", reportParm.getName());
+                            if (reportParm.getValueClassName().equals("java.util.Date")
+                                || reportParm.getValueClassName().equals("java.sql.Date")
+                                || reportParm.getValueClassName().equals("java.sql.Timestamp")
+                            ) {
+                                LOG.debug("adding a {} parm name {}", reportParm.getValueClassName(), reportParm.getName());
                                 final ReportDateParm dateParm = new ReportDateParm();
                                 dateParm.setUseAbsoluteDate(false);
                                 if (reportParm.getDescription() != null) {
@@ -279,39 +277,7 @@ public class JasperReportService implements ReportService {
                                     dateParm.setDisplayName(reportParm.getName());
                                 }
                                 dateParm.setName(reportParm.getName());
-                                dateParm.setCount(new Integer(1));
-                                dateParm.setInterval("day");
-                                dateParm.setHours(0);
-                                dateParm.setMinutes(0);
-                                if (defaultValues.containsKey(reportParm.getName()) && (defaultValues.get(reportParm.getName()) != null)) {
-                                    dateParm.setDate((Date) defaultValues.get(reportParm.getName()));
-                                    Calendar cal = Calendar.getInstance();
-                                    cal.setTime(dateParm.getDate());
-                                    dateParm.setMinutes(cal.get(Calendar.MINUTE));
-                                    dateParm.setHours(cal.get(Calendar.HOUR_OF_DAY));
-                                } else {
-                                    final Calendar cal = Calendar.getInstance();
-                                    cal.set(Calendar.HOUR_OF_DAY, 0);
-                                    cal.set(Calendar.MINUTE, 0);
-                                    cal.set(Calendar.SECOND, 0);
-                                    cal.set(Calendar.MILLISECOND, 0);
-                                    dateParm.setDate(cal.getTime());
-                                }
-                                dateParms.add(dateParm);
-                                continue;
-                            }
-
-                            if (reportParm.getValueClassName().equals("java.sql.Date") || reportParm.getValueClassName().equals("java.sql.Timestamp")) {
-                                LOG.debug("adding a java.sql.Date or Timestamp parm name {}", reportParm.getName());
-                                final ReportDateParm dateParm = new ReportDateParm();
-                                dateParm.setUseAbsoluteDate(false);
-                                if (reportParm.getDescription() != null) {
-                                    dateParm.setDisplayName(reportParm.getDescription());
-                                } else {
-                                    dateParm.setDisplayName(reportParm.getName());
-                                }
-                                dateParm.setName(reportParm.getName());
-                                dateParm.setCount(new Integer(1));
+                                dateParm.setCount(Integer.valueOf(1));
                                 dateParm.setInterval("day");
                                 dateParm.setHours(0);
                                 dateParm.setMinutes(0);
@@ -333,9 +299,12 @@ public class JasperReportService implements ReportService {
                                 continue;
                             }
                             throw new ReportException("Unsupported report parameter type " + reportParm.getValueClassName());
+                        } else {
+                            LOG.debug("SKIPPING {}", reportParm.getName());
                         }
                     }
-                    return reportParameters;                }
+                    return reportParameters;
+                }
             });
         } catch (final Exception e) {
             if (e instanceof ReportException) throw (ReportException)e;
@@ -387,7 +356,7 @@ public class JasperReportService implements ReportService {
         if (location.contains("jrpxml")) {
             return JRPrintXmlLoader.load(location);
         } else {
-            return (JasperPrint) JRLoader.loadObject(location);
+            return (JasperPrint) JRLoader.loadObject(new File(location));
         }
     }
 
@@ -395,23 +364,13 @@ public class JasperReportService implements ReportService {
      * {@inheritDoc}
      */
     @Override
-    public String run(final HashMap<String, Object> reportParms, final String reportId) throws ReportException {
+    public String run(final Map<String, Object> reportParms, final String reportId) throws ReportException {
         try {
             return Logging.withPrefix(LOG4J_CATEGORY, new Callable<String>() {
                 @Override public String call() throws Exception {
                     final String baseDir = System.getProperty("opennms.report.dir");
-                    JasperReport jasperReport = null;
-
-                    final DBUtils db = new DBUtils();
-
-                    try {
-                        jasperReport = JasperCompileManager.compileReport(m_globalReportRepository.getTemplateStream(reportId));
-                    } catch (JRException e) {
-                        LOG.error("Unable to compile jasper report {}", reportId, e);
-                        throw new ReportException("Unable to compile jasperReport " + reportId, e);
-                    }
-
-                    final HashMap<String, Object> jrReportParms = buildJRparameters(reportParms, jasperReport.getParameters());
+                    final JasperReport jasperReport = getJasperReport(reportId);
+                    final Map<String, Object> jrReportParms = buildJRparameters(reportParms, jasperReport.getParameters());
 
                     // Find sub reports and provide sub reports as parameter
                     jrReportParms.putAll(buildSubreport(reportId, jasperReport));
@@ -421,15 +380,16 @@ public class JasperReportService implements ReportService {
 
                     try {
                         if ("jdbc".equalsIgnoreCase(m_globalReportRepository.getEngine(reportId))) {
+                            final DBUtils db = new DBUtils();
                             try {
-                                final Connection connection = DataSourceFactory.getDataSource().getConnection();
+                                final Connection connection = DataSourceFactory.getInstance().getConnection();
                                 db.watch(connection);
-                                JasperFillManager.fillReportToFile(jasperReport, outputFileName, reportParms, connection);
+                                JasperFillManager.fillReportToFile(jasperReport, outputFileName, jrReportParms, connection);
                             } finally {
                                 db.cleanUp();
                             }
                         } else if (m_globalReportRepository.getEngine(reportId).equals("null")) {
-                            JasperFillManager.fillReportToFile(jasperReport, outputFileName, reportParms, new JREmptyDataSource());
+                            JasperFillManager.fillReportToFile(jasperReport, outputFileName, jrReportParms, new JREmptyDataSource());
                         } else {
                             throw new ReportException("No suitable datasource configured for report " + reportId);
                         }
@@ -457,9 +417,10 @@ public class JasperReportService implements ReportService {
      * @param mainReport   JasperReport a compiled main report
      * @return a sub report parameter map as {@link java.util.HashMap<String,Object>} object
      */
-    private HashMap<String, Object> buildSubreport(final String mainReportId, final JasperReport mainReport) {
-        String repositoryId = mainReportId.substring(0, mainReportId.indexOf("_"));
-        HashMap<String, Object> subreportMap = new HashMap<String, Object>();
+    private Map<String, Object> buildSubreport(final String mainReportId, final JasperReport mainReport) throws ReportException {
+        int idx = mainReportId.indexOf('_');
+        String repositoryId = idx > -1 ? mainReportId.substring(0, idx) : "local";
+        Map<String, Object> subreportMap = new HashMap<String, Object>();
 
         // Filter parameter for sub reports
         for (JRParameter parameter : mainReport.getParameters()) {
@@ -471,11 +432,7 @@ public class JasperReportService implements ReportService {
 
         for (final Map.Entry<String,Object> entry : subreportMap.entrySet()) {
             final String reportId = repositoryId + "_" + entry.getKey();
-            try {
-                entry.setValue(JasperCompileManager.compileReport(m_globalReportRepository.getTemplateStream(reportId)));
-            } catch (final JRException e) {
-                LOG.debug("failed to compile report {}", reportId, e);
-            }
+            entry.setValue(getJasperReport(reportId));
         }
 
         for (final Map.Entry<String,Object> entry : subreportMap.entrySet()) {
@@ -488,26 +445,18 @@ public class JasperReportService implements ReportService {
      * {@inheritDoc}
      */
     @Override
-    public void runAndRender(final HashMap<String, Object> reportParms, final String reportId, final ReportFormat format, final OutputStream outputStream) throws ReportException {
+    public void runAndRender(final Map<String, Object> reportParms, final String reportId, final ReportFormat format, final OutputStream outputStream) throws ReportException {
         try {
             Logging.withPrefix(LOG4J_CATEGORY, new Callable<Void>() {
                 @Override public Void call() throws Exception {
-                    JasperReport jasperReport = null;
-
-                    try {
-                        jasperReport = JasperCompileManager.compileReport(m_globalReportRepository.getTemplateStream(reportId));
-                    } catch (final JRException e) {
-                        LOG.error("unable to compile jasper report", e);
-                        throw new ReportException("unable to compile jasperReport", e);
-                    }
-
-                    final HashMap<String, Object> jrReportParms = buildJRparameters(reportParms, jasperReport.getParameters());
+                    final JasperReport jasperReport = getJasperReport(reportId);
+                    final Map<String, Object> jrReportParms = buildJRparameters(reportParms, jasperReport.getParameters());
                     jrReportParms.putAll(buildSubreport(reportId, jasperReport));
 
                     if ("jdbc".equalsIgnoreCase(m_globalReportRepository.getEngine(reportId))) {
                         final DBUtils db = new DBUtils();
                         try {
-                            final Connection connection = DataSourceFactory.getDataSource().getConnection();
+                            final Connection connection = DataSourceFactory.getInstance().getConnection();
                             db.watch(connection);
 
                             final JasperPrint jasperPrint = JasperFillManager.fillReport(jasperReport, jrReportParms, connection);
@@ -556,51 +505,17 @@ public class JasperReportService implements ReportService {
         JRCsvExporter exporter = new JRCsvExporter();
         exporter.setParameter(JRExporterParameter.JASPER_PRINT, jasperPrint);
         exporter.setParameter(JRExporterParameter.OUTPUT_STREAM, outputStream);
-
         exporter.exportReport();
     }
-    
-    private void exportReportToXls(JasperPrint jasperPrint,
-            OutputStream outputStream) throws JRException {
-		JRXlsxExporter exporter = new JRXlsxExporter();
-		exporter.setParameter(JRXlsExporterParameter.IS_DETECT_CELL_TYPE, Boolean.TRUE);
-		exporter.setParameter(JRXlsExporterParameter.IS_WHITE_PAGE_BACKGROUND, Boolean.FALSE);
-		exporter.setParameter(JRXlsExporterParameter.IS_REMOVE_EMPTY_SPACE_BETWEEN_ROWS, Boolean.TRUE); 
-		exporter.setParameter(JRXlsExporterParameter.IS_REMOVE_EMPTY_SPACE_BETWEEN_COLUMNS, Boolean.TRUE);
-		exporter.setParameter(JRExporterParameter.JASPER_PRINT, jasperPrint);
-		exporter.setParameter(JRExporterParameter.OUTPUT_STREAM, outputStream);
-		
-		exporter.exportReport();
-	}
 
-    private void exportReportToHtml(JasperPrint jasperPrint,
-            OutputStream outputStream) throws JRException {
-		JRHtmlExporter exporter = new JRHtmlExporter();
-		exporter.setParameter(JRHtmlExporterParameter.BETWEEN_PAGES_HTML,"");
-		exporter.setParameter(JRHtmlExporterParameter.IS_REMOVE_EMPTY_SPACE_BETWEEN_ROWS,Boolean.TRUE);
-		exporter.setParameter(JRHtmlExporterParameter.IS_USING_IMAGES_TO_ALIGN,Boolean.FALSE);
-		exporter.setParameter(JRHtmlExporterParameter.IMAGES_MAP,new HashMap());
-		exporter.setParameter(JRExporterParameter.JASPER_PRINT, jasperPrint);
-		exporter.setParameter(JRExporterParameter.OUTPUT_STREAM, outputStream);
-		
-		exporter.exportReport();
-	}
-    
-
-    private HashMap<String, Object> buildJRparameters(final HashMap<String, Object> onmsReportParms, final JRParameter[] reportParms) throws ReportException {
-        final HashMap<String, Object> jrReportParms = new HashMap<String, Object>();
+    private Map<String, Object> buildJRparameters(final Map<String, Object> onmsReportParms, final JRParameter[] reportParms) throws ReportException {
+        final Map<String, Object> jrReportParms = new HashMap<String, Object>();
 
         for (final JRParameter reportParm : reportParms) {
-            LOG.debug("found report parm {} of class {}", reportParm.getValueClassName(), reportParm.getName());
-            if (reportParm.isSystemDefined() == false) {
+            if (apply(getParameterFilters(), reportParm)) {
                 final String parmName = reportParm.getName();
 
-                if (reportParm.isForPrompting() == false) {
-                    LOG.debug("Required parameter {} is not for prompting - continuing", parmName);
-                    continue;
-                }
-
-                if (onmsReportParms.containsKey(parmName) == false) {
+                if (!onmsReportParms.containsKey(parmName)) {
                     throw new ReportException("Required parameter " + parmName + " not supplied to JasperReports by OpenNMS");
                 }
 
@@ -640,7 +555,11 @@ public class JasperReportService implements ReportService {
                     jrReportParms.put(parmName, new java.sql.Timestamp(date.getTime()));
                     continue;
                 }
-
+                if (reportParm.getValueClassName().equals("java.time.ZoneId")) {
+                    final ZoneId zoneId = ZoneId.of((String) onmsReportParms.get(parmName));
+                    jrReportParms.put(parmName, zoneId);
+                    continue;
+                }
                 throw new ReportException("Unsupported report parameter type " + reportParm.getValueClassName());
             }
         }
@@ -649,672 +568,123 @@ public class JasperReportService implements ReportService {
 
     }
 
+    public void setGlobalReportRepository(final GlobalReportRepository globalReportRepository) {
+        m_globalReportRepository = globalReportRepository;
+    }
+
+    private JasperDesign getJasperDesign(String reportId) throws ReportException {
+        try {
+            JasperDesign jasperDesign = JRXmlLoader.load(m_globalReportRepository.getTemplateStream(reportId));
+            return jasperDesign;
+        } catch (JRException e) {
+            LOG.error("Unable to load report with id '{}'", reportId, e);
+            throw new ReportException("Unable to load report with id '" + reportId + "'", e);
+        }
+    }
+
+    private JasperReport getJasperReport(String reportId) throws ReportException {
+        JasperDesign jasperDesign = getJasperDesign(reportId);
+        return compileReport(jasperDesign);
+    }
+
     /**
-     * {@inheritDoc}
+     * Compiles the given {@link JasperDesign} (*.jrxml) to a {@link JasperReport} (*.jasper)
+     *
+     * @param jasperDesign The Design (*.jrxml) to compile
+     * @return The compiled report (*.jasper)
+     * @throws ReportException If the design could not be compiled.
      */
-    @Override
-    public boolean validate(final HashMap<String, Object> reportParms, final String reportId) {
-        // returns true until we can take parameters
+    private JasperReport compileReport(JasperDesign jasperDesign) throws ReportException {
+        try {
+            JasperReport report;
+
+            // If the target report is written in Java, use our custom JDT compiler
+            if (JRReport.LANGUAGE_JAVA.equals(jasperDesign.getLanguage())) {
+                JasperReportsContext reportsContext = new SimpleJasperReportsContext();
+                JRPropertiesUtil.getInstance(reportsContext).setProperty(JRCompiler.COMPILER_PREFIX + JRReport.LANGUAGE_JAVA, CustomJRJdtCompiler.class.getCanonicalName());
+                JasperCompileManager jasperCompilerManager = JasperCompileManager.getInstance(reportsContext);
+                report = jasperCompilerManager.compile(jasperDesign);
+            } else {
+                // Otherwise, use the default that Jasper providers
+                report = JasperCompileManager.compileReport(jasperDesign);
+            }
+
+            for (Object eachKey : System.getProperties().keySet()) {
+                String eachStringKey = (String) eachKey;
+                if (eachStringKey.startsWith("net.sf.jasperreports")) {
+                    report.setProperty(eachStringKey, System.getProperty(eachStringKey));
+                }
+            }
+
+            compileSubreportsRecursively(report);
+            return report;
+        } catch (final JRException e) {
+            LOG.error("unable to compile jasper report {}", e);
+            throw new ReportException("unable to compile jasperReport", e);
+        }
+    }
+
+    /**
+     * Iterates recursively over each subreport element in the given {@link JasperReport} and compiles the referenced
+     * subreport if not already compiled.
+     *
+     * @param report The {@link JasperReport} to compile all subreports recursively if needed.
+     */
+    private void compileSubreportsRecursively(JasperReport report) {
+        JRElementsVisitor.visitReport(report, new JRVisitorSupport() {
+            @Override
+            public void visitSubreport(JRSubreport subreport) {
+                final String compiledSubreportName = evaluateToString(report, subreport.getExpression());
+                final String sourceSubreportName = compiledSubreportName.replace(".jasper", ".jrxml");
+                final File compiledSubreportFile = new File(compiledSubreportName);
+                final File sourceSubreportFile = new File(sourceSubreportName);
+                if(!compiledSubreportFile.exists() || compiledSubreportFile.lastModified() < sourceSubreportFile.lastModified()) {
+
+                    LOG.debug("Compiling Subreport '{}' ...", compiledSubreportName);
+                    try {
+                        JasperDesign subreportDesign = JRXmlLoader.load(sourceSubreportName);
+                        JasperReport subreportCompiled = compileReport(subreportDesign);
+                        JRSaver.saveObject(subreportCompiled, compiledSubreportFile);
+                        compileSubreportsRecursively(subreportCompiled); // Compile containing sub reports if needed
+                    } catch (ReportException | JRException e) {
+                        LOG.error("Could not compile Jasper Subreport. Expression: {}, Evaluated Expression: {}", subreport.getExpression(), compiledSubreportName, e);
+                    }
+                    LOG.debug("Subreport '{}' compiled", compiledSubreportName);
+                } else {
+                    // The report is already compiled, compile containing sub reports if needed
+                    try {
+                        compileSubreportsRecursively((JasperReport) JRLoader.loadObject(compiledSubreportFile));
+                    } catch (JRException e) {
+                        LOG.error("Could not load compiled Jasper Subreport. Expression: {}, Evaluated Expression: {}", subreport.getExpression(), compiledSubreportName, e);
+                    }
+                }
+            }
+        });
+    }
+
+    protected boolean apply(List<ParameterFilter> parameterFilters, JRParameter reportParm) {
+        LOG.debug("Found report parameter {} (isSystemDefined(){}, isForPrompting()={}", reportParm.getName(), reportParm.isSystemDefined(), reportParm.isForPrompting());
+        for (ParameterFilter eachFilter : parameterFilters) {
+            if (!eachFilter.apply(reportParm)) {
+                return false;
+            }
+        }
         return true;
     }
 
-    /**
-     * {@inheritDoc}
-     */
-	@Override
-	public void runAndRender(List<Integer> eventIds, String reportId,
-			ReportFormat format, OutputStream outputStream)
-			throws ReportException {
+    protected List<ParameterFilter> getParameterFilters() {
+        return parameterFilters;
+    }
 
-    	
-    	// Get the event report details
-        ArrayList<EventReportStructure> eventReportList = new ArrayList<EventReportStructure>();
-        eventReportList = getEventReportList(eventIds,format);
-		
-        JasperReport jasperReport = null;
-        JasperPrint jasperPrint = null;
-        HashMap<String, Object> reportParms = new HashMap<String, Object>();
-        try {
-        	JasperDesign jasperDesign = JRXmlLoader.load(m_globalReportRepository.getTemplateStream(reportId));
-            jasperReport = JasperCompileManager.compileReport(jasperDesign);
-        } catch (JRException e) {
-            LOG.error("unable to compile jasper report", e);
-            throw new ReportException("unable to compile jasperReport", e);
+    public static String evaluateToString(JasperReport report, JRExpression expression) {
+        Objects.requireNonNull(report);
+        Objects.requireNonNull(expression);
+        SubreportExpressionVisitor visitor = new SubreportExpressionVisitor(report);
+        String string = visitor.visit(expression);
+        if (string != null) {
+            JexlEngine engine = new JexlEngine();
+            return (String) engine.createExpression(string).evaluate(new MapContext());
         }
-		
-        if ("null".equalsIgnoreCase(m_globalReportRepository.getEngine(reportId))) {
-            try {
-         		JRBeanCollectionDataSource beanColDataSource = new JRBeanCollectionDataSource(eventReportList);
-         		
-         		JRGzipVirtualizer virtualizer = new JRGzipVirtualizer(10240);
-         		reportParms.put(JRParameter.REPORT_VIRTUALIZER, virtualizer);
-
-         		jasperPrint = JasperFillManager.fillReport(jasperReport,reportParms,beanColDataSource);
-         		
-         		if(ReportFormat.PDF == format || ReportFormat.CSV == format ){
-         			exportReport(format, jasperPrint, outputStream);
-         		} else if(ReportFormat.HTML == format) {
-         			exportReportToHtml(jasperPrint,outputStream);
-         		} else if(ReportFormat.XLS == format){
-         			exportReportToXls(jasperPrint,outputStream);
-         		} else {
-                	LOG.error("Unknown file format : {}", format);
-                }
-            } catch (JRException e) {
-                LOG.error("jasper report exception", e);
-                throw new ReportException("unable to run or render jasperReport",e);
-            }
-        }
-        
-        // Create the event report folder if it's not exist already
-        String baseDir = System.getProperty("opennms.report.dir")+"/event";
-        File eventReportfolder = new File(baseDir);  
-		if (!eventReportfolder.exists()){  
-			if(eventReportfolder.mkdir()){
-				LOG.debug("The event report folder is successfully created in {} location", baseDir);
-			} else {
-				LOG.debug("unable to create the event report folder in {} location", baseDir);
-			}
-		}else{  
-			LOG.debug("The event report folder is already exist in server location");
-		}
-		
-		// Store the event report into the local server
- 		String outputFileName = new String(baseDir + "/" + jasperReport.getName()+ new SimpleDateFormat("_MMddyyyy_HHmmss").format(new Date())+"."+String.valueOf(format).toLowerCase());
- 		OutputStream outputReportStream = null;
-		try{
-			outputReportStream = new FileOutputStream (outputFileName);
-			if(ReportFormat.PDF == format || ReportFormat.CSV == format ){
-     			exportReport(format, jasperPrint, outputReportStream);
-     		} else if(ReportFormat.HTML == format) {
-     			exportReportToHtml(jasperPrint,outputReportStream);
-     		} else if(ReportFormat.XLS == format){
-     			exportReportToXls(jasperPrint,outputReportStream);
-     		} else {
-     			LOG.error("Unknown file format : {}", format);
-     		}
-		} catch(JRException e){
-			LOG.error("jasper report exception", e);
-		} catch (FileNotFoundException e) {
-			LOG.error("unable to find the server location", e);
-		}
-	}
-	
-	public ArrayList<EventReportStructure> getEventReportList(List<Integer> eventIds,ReportFormat format) throws ReportException{
-    	
-		// Date format for an alarm events
-	    SimpleDateFormat formater = new SimpleDateFormat("MM/dd/yy hh:mm:ss aaa",Locale.ENGLISH);
-	    
-	    ArrayList<EventReportStructure> eventReportList = new ArrayList<EventReportStructure>();
-	   
-	    if(ReportFormat.CSV ==format)
-			for(Integer eventId : eventIds){
-				
-				// Get the events by it's id's
-				OnmsEvent onmsEvent = m_eventDao.get(eventId);
-				eventReportList.add(getEventReportStructureforCSV(onmsEvent));
-			}
-	    else {
-			for(Integer eventId : eventIds){
-				
-				// Get the events by it's id's
-				OnmsEvent onmsEvent = m_eventDao.get(eventId);
-		 		if(onmsEvent != null)
-				eventReportList.add(getEventReportStructure(onmsEvent));
-			}
-	    }
-		return eventReportList;
-    }
-
-	 public EventReportStructure getEventReportStructure(OnmsEvent onmsEvent) throws ReportException{
-	    	
-	    	// Date format for an events
-		 SimpleDateFormat formater = new SimpleDateFormat("MM/dd/yy hh:mm:ss aaa",Locale.ENGLISH);
-		 try{		    
-		 EventReportStructure eventJasperReportStructure = new EventReportStructure();
-		 
-		 try{
-			 if(onmsEvent.getNodeLabel() != null){
-				 eventJasperReportStructure.setNodeLabel(onmsEvent.getNodeLabel());
-			 }else{
-				 eventJasperReportStructure.setNodeLabel(null);
-			 }
-		 } catch(Exception e){
-			 eventJasperReportStructure.setNodeLabel(null);
-		 }
-		 
-		 if(onmsEvent != null)
-		 eventJasperReportStructure.setEventId(onmsEvent.getId());
-		 OnmsAlarm onmsAlarm = onmsEvent.getAlarm();
-		 if(onmsAlarm != null)
-			 eventJasperReportStructure.setAlarmId(onmsAlarm.getId());
-		 eventJasperReportStructure.setEventUEI(onmsEvent.getEventUei());
-		 eventJasperReportStructure.setEventLogMsg(onmsEvent.getEventLogMsg());
-		 if(onmsEvent.getEventCreateTime()!=null)
-		 eventJasperReportStructure.setCreateTime(String.valueOf(formater.format(onmsEvent.getEventCreateTime())));
-		 return eventJasperReportStructure;
-		 }
-		
-		 catch(Exception e)
-		 {
-			 LOG.error("Error in EventReportStructure report", e);
-	            throw new ReportException("Error in EventReportStructure report", e);
-		 }
-		 
-	 }
-	
-	
-	
-
-	 public EventReportStructure getEventReportStructureforCSV(OnmsEvent onmsEvent) throws ReportException{
-	    	
-	    	// Date format for an events
-		 SimpleDateFormat formater = new SimpleDateFormat("MM/dd/yy hh:mm:ss aaa",Locale.ENGLISH);
-		 try{
-			 		 		    
-		 EventReportStructure eventJasperReportStructure = new EventReportStructure();
-		 
-		 try{
-			 if(onmsEvent.getNodeLabel() != null){
-				 eventJasperReportStructure.setNodeLabel(onmsEvent.getNodeLabel());
-			 }else{
-				 eventJasperReportStructure.setNodeLabel(null);
-			 }
-		 } catch(Exception e){
-			 eventJasperReportStructure.setNodeLabel(null);
-		 }
-		 if(onmsEvent != null)
-		 eventJasperReportStructure.setEventId(onmsEvent.getId());
-		 OnmsAlarm onmsAlarm = onmsEvent.getAlarm();
-		 if(onmsAlarm != null)
-			 eventJasperReportStructure.setAlarmId(onmsAlarm.getId());
-		 eventJasperReportStructure.setEventUEI(onmsEvent.getEventUei());
-		 
-		 try{
-			 if(onmsEvent.getNode()!=null){
-				 eventJasperReportStructure.setNodeId(onmsEvent.getNode().getId());
-			 }
-			 else{
-				 eventJasperReportStructure.setNodeId(null);
-			 }
-		 } catch(Exception e){
-			 eventJasperReportStructure.setNodeId(null);
-		 }
-		 
-		 if(onmsEvent.getEventTime()!=null)
-		 eventJasperReportStructure.setEventTime(String.valueOf(formater.format(onmsEvent.getEventTime())));
-		 eventJasperReportStructure.setEventHost(onmsEvent.getEventHost());
-		 eventJasperReportStructure.setEventSource(onmsEvent.getEventSource());
-		 if(onmsEvent.getIpAddr()!=null)
-		 eventJasperReportStructure.setIpAddr(onmsEvent.getIpAddr().getHostAddress());
-		 if(onmsEvent.getDistPoller()!=null)
-		 eventJasperReportStructure.setEventDpName(onmsEvent.getDistPoller().getName());//needto confirm
-	     eventJasperReportStructure.setEventSnmpHost(onmsEvent.getEventSnmpHost());
-	     if(onmsEvent.getServiceType() !=null)
-	     eventJasperReportStructure.setServiceID(onmsEvent.getServiceType().getId());//need to clarify
-	     eventJasperReportStructure.setEventSnmp(onmsEvent.getEventSnmp());
-	     eventJasperReportStructure.setEventParms(onmsEvent.getEventParms());
-	     if(onmsEvent.getEventCreateTime()!=null)
-	     eventJasperReportStructure.setEventCreateTime(String.valueOf(formater.format(onmsEvent.getEventCreateTime())));
-	     eventJasperReportStructure.setEventDescr(onmsEvent.getEventDescr());
-	     eventJasperReportStructure.setEventLogGroup(onmsEvent.getEventLogGroup());
-	     eventJasperReportStructure.setEventLogMsg(onmsEvent.getEventLogMsg());
-	     eventJasperReportStructure.setEventSeverity(onmsEvent.getSeverityLabel().toString());
-	     eventJasperReportStructure.setEventPathOutage(onmsEvent.getEventPathOutage());
-	     eventJasperReportStructure.setEventCorrelation(onmsEvent.getEventCorrelation());
-	     eventJasperReportStructure.setEventSuppressedCount(onmsEvent.getEventSuppressedCount());
-	     eventJasperReportStructure.setEventOperInstruct(onmsEvent.getEventOperInstruct());
-	     eventJasperReportStructure.setEventAutoAction(onmsEvent.getEventAutoAction());
-	     eventJasperReportStructure.setEventOperAction(onmsEvent.getEventOperAction());
-	     eventJasperReportStructure.setEventOperActionMenuText(onmsEvent.getEventOperActionMenuText());
-	     eventJasperReportStructure.setEventNotification(onmsEvent.getEventNotification());
-	     eventJasperReportStructure.setEventTTicket(onmsEvent.getEventTTicket());
-	     eventJasperReportStructure.setEventTTicketState(onmsEvent.getEventTTicketState());
-	     eventJasperReportStructure.setEventForward(onmsEvent.getEventForward());
-	     eventJasperReportStructure.setEventMouseOverText(onmsEvent.getEventMouseOverText());
-	     eventJasperReportStructure.setEventLog(onmsEvent.getEventLog());
-	     eventJasperReportStructure.setEventDisplay(onmsEvent.getEventDisplay());
-	     eventJasperReportStructure.setEventAckUser(onmsEvent.getEventAckUser());
-	     if(onmsEvent.getEventAckTime()!=null)
-	     eventJasperReportStructure.setEventAckTime(String.valueOf(formater.format(onmsEvent.getEventAckTime())));	        
-	     eventJasperReportStructure.setIfIndex(onmsEvent.getIfIndex());
-	     return eventJasperReportStructure;
-		 }
-		 
-		 catch(Exception e)
-		 {
-			 LOG.error("Error in EventReportStructure CSV report", e);
-	         throw new ReportException("Error in EventReportStructure CSV report ", e); 
-			 
-		 }
-	 }
-	 
-	public void setEventDao(EventDao m_eventDao) {
-		this.m_eventDao = m_eventDao;
-	}
-
-    public void runAndRender(List<Integer> alarmIds,HashMap<Integer, List<Integer>> eventIdsForAlarms ,
-    		String reportId, ReportFormat format, OutputStream outputStream, String fileName) throws ReportException {
-    	
-    	LOG.info("Enter into the rundAndRender action for alarm report");
-    	// Get the alarm report details
-        ArrayList<AlarmReportStructure> alarmReportList = new ArrayList<AlarmReportStructure>();
-        alarmReportList = getAlarmReportList(alarmIds,eventIdsForAlarms,format);
-		
-        JasperReport jasperReport = null;
-        JasperPrint jasperPrint = null;
-        HashMap<String, Object> reportParms = new HashMap<String, Object>();
-        try {
-        	JasperDesign jasperDesign = JRXmlLoader.load(m_globalReportRepository.getTemplateStream(reportId));
-            jasperReport = JasperCompileManager.compileReport(jasperDesign);
-        } catch (JRException e) {
-            LOG.error("unable to compile jasper report", e);
-            throw new ReportException("unable to compile jasperReport", e);
-        }
-		
-        if ("null".equalsIgnoreCase(m_globalReportRepository.getEngine(reportId))) {
-            try {
-         		JRBeanCollectionDataSource beanColDataSource = new JRBeanCollectionDataSource(alarmReportList);
-         		JRGzipVirtualizer virtualizer = new JRGzipVirtualizer(10240);
-         		reportParms.put(JRParameter.REPORT_VIRTUALIZER, virtualizer);
-         		jasperPrint = JasperFillManager.fillReport(jasperReport,reportParms,beanColDataSource);
-         		
-         		if(ReportFormat.PDF == format || ReportFormat.CSV == format ){
-         			exportReport(format, jasperPrint, outputStream);
-         		} else if(ReportFormat.HTML == format) {
-         			exportReportToHtml(jasperPrint,outputStream);
-         		} else if(ReportFormat.XLS == format){
-         			exportReportToXls(jasperPrint,outputStream);
-         		} else {
-                	LOG.error("Unknown file format : {}", format);
-                }
-            } catch (JRException e) {
-                LOG.error("jasper report exception", e);
-                throw new ReportException("unable to run or render jasperReport",e);
-            }
-        }
-        
-        String baseDir = System.getProperty("opennms.alarm.report.dir");
-        File alarmReportfolder = new File(baseDir);
-        
-        // Create the alarm report folder if it's not exist already
-        if (!alarmReportfolder.exists()){
-        	baseDir = System.getProperty("opennms.report.dir")+"/alarm";
-        	alarmReportfolder = new File(baseDir);
-        	if(alarmReportfolder.mkdir()){
-        		 LOG.debug("The alarm report folder is successfully created in {} location", baseDir);
-			} else {
-				 LOG.error("Unable to create the alarm report folder in {} location", baseDir);
-			}
-        }
-		
-		// To Store the alarm report in the local server
- 		String outputFileName = new String(baseDir + "/" + fileName);
- 		OutputStream outputReportStream = null;
-		try{
-			LOG.info("The alarm report is currently exporting...");
-			outputReportStream = new FileOutputStream (outputFileName);
-			if(ReportFormat.PDF == format || ReportFormat.CSV == format ){
-     			exportReport(format, jasperPrint, outputReportStream);
-     			LOG.info("The alarm report is successfully stored in the local server");
-     		} else if(ReportFormat.HTML == format) {
-     			exportReportToHtml(jasperPrint,outputReportStream);
-     			LOG.info("The alarm report is successfully stored in the local server");
-     		} else if(ReportFormat.XLS == format){
-     			exportReportToXls(jasperPrint,outputReportStream);
-     			LOG.info("The alarm report is successfully stored in the local server");
-     		} else {
-     			LOG.error("Unknown file format : {}", format);
-     		}
-		} catch(JRException e){
-			LOG.error("jasper report exception", e);
-		} catch (FileNotFoundException e) {
-			LOG.error("unable to find the server location", e);
-		}
-		LOG.info("Terminated from the rundAndRender action for alarm report");
-    }
-    
-    
-    public ArrayList<AlarmReportStructure> getAlarmReportList(List<Integer> alarmIds, HashMap<Integer, List<Integer>> eventIdsForAlarms, ReportFormat format){
-    	
-		// Date format for an alarm events
-	    SimpleDateFormat formater = new SimpleDateFormat("MM/dd/yy hh:mm:ss aaa",Locale.ENGLISH);
-	    
-	    ArrayList<AlarmReportStructure> alarmReportList = new ArrayList<AlarmReportStructure>();
-		for(Integer alarmId : alarmIds){
-			
-			// Get the alarm and events by it's id's
-			OnmsAlarm onmsAlarm = m_alarmDao.get(alarmId);
-			
-			List<OnmsEvent> onmsEventList = getEvents(eventIdsForAlarms, alarmId);
-			
-			for(int eventIterator = 0; eventIterator < onmsEventList.size() ; eventIterator++){
-				
-				OnmsEvent currOnmsEvent = onmsEventList.get(eventIterator);
-				if(currOnmsEvent.getAlarm() != null){
-					if(currOnmsEvent.getAlarm().getId()!= null && currOnmsEvent.getAlarm().getId()>0){
-					
-		    			Calendar eventCreatTime = null;
-						try {
-							eventCreatTime = this.getDateFormat(formater.parse(formater.format(currOnmsEvent.getEventCreateTime())));
-						} catch (ParseException e) {
-							e.printStackTrace();
-						}
-		    			
-		    			// Find the duplicate alarm Id
-						boolean	isAlarmsWithSameId = false;
-						if(eventIterator>0) {
-							isAlarmsWithSameId = getDuplicateIdStatus(onmsEventList.get(eventIterator-1), currOnmsEvent.getAlarm().getId(),eventIterator);
-						}
-						
-						// Get the acknowledgment by it's id
-						List<OnmsAcknowledgment> onmsAcknowledgmentList = getAcknowledgments(currOnmsEvent.getAlarm().getId());
-						if(onmsAcknowledgmentList.size()>0){
-							
-							boolean isEmptyAcknowledgment = true;
-							String[] getAckStatus = new String[3]; 
-							int ackCount = 0;
-							
-							if(isAlarmsWithSameId){
-								OnmsEvent preOnmsEvent = onmsEventList.get(eventIterator-1);
-								Calendar preEventCreatTime = null;
-								try {
-									preEventCreatTime = this.getDateFormat(formater.parse(formater.format(preOnmsEvent.getEventCreateTime())));
-								} catch (ParseException e) {
-									e.printStackTrace();
-								}
-								
-								for(OnmsAcknowledgment onmsAcknowledgment : onmsAcknowledgmentList){
-									Calendar ackTime = null;
-									try {
-										ackTime = this.getDateFormat(formater.parse(formater.format(onmsAcknowledgment.getAckTime())));
-									} catch (ParseException e) {
-										e.printStackTrace();
-									}
-									
-									//Comparison of event creation time with acknowledgment time
-									if((((eventCreatTime.compareTo(ackTime)) < 0) && ((preEventCreatTime.compareTo(ackTime)) > 0))){
-										if(ackCount == 0){
-											getAckStatus[0] = String.valueOf(formater.format(onmsAcknowledgment.getAckTime()));
-											getAckStatus[1] = "\n"+onmsAcknowledgment.getAckUser();
-											getAckStatus[2] = "\n"+String.valueOf(onmsAcknowledgment.getAckAction());
-											ackCount++;
-										} else {
-											getAckStatus[0] = getAckStatus[0] +"\n"+ String.valueOf(formater.format(onmsAcknowledgment.getAckTime()));
-											getAckStatus[1] = getAckStatus[1] +"\n\n"+ onmsAcknowledgment.getAckUser();
-											getAckStatus[2] = getAckStatus[2] +"\n\n"+ String.valueOf(onmsAcknowledgment.getAckAction());
-										}
-					        			isEmptyAcknowledgment = false;
-									}
-								}
-							} else {
-								
-								for(OnmsAcknowledgment onmsAcknowledgment : onmsAcknowledgmentList){
-									Calendar ackTime = null;
-									try {
-										ackTime = this.getDateFormat(formater.parse(formater.format(onmsAcknowledgment.getAckTime())));
-									} catch (ParseException e) {
-										e.printStackTrace();
-									}
-									//Comparison of event creation time with acknowledgment time
-									if((eventCreatTime.compareTo(ackTime)) < 0){
-										if(ackCount == 0){
-											getAckStatus[0] = String.valueOf(formater.format(onmsAcknowledgment.getAckTime()));
-											getAckStatus[1] = "\n"+onmsAcknowledgment.getAckUser();
-											getAckStatus[2] = "\n"+String.valueOf(onmsAcknowledgment.getAckAction());
-											ackCount++;
-										} else {
-											getAckStatus[0] = getAckStatus[0] +"\n"+ String.valueOf(formater.format(onmsAcknowledgment.getAckTime()));
-											getAckStatus[1] = getAckStatus[1] +"\n\n"+ onmsAcknowledgment.getAckUser();
-											getAckStatus[2] = getAckStatus[2] +"\n\n"+ String.valueOf(onmsAcknowledgment.getAckAction());
-										}
-					        			isEmptyAcknowledgment = false;
-									}
-				    			}
-							}
-							if(isEmptyAcknowledgment){
-								alarmReportList.add(getAlarmReportStructure(onmsAlarm, currOnmsEvent, null,format));
-							} else {
-								alarmReportList.add(getAlarmReportStructure(onmsAlarm, currOnmsEvent, getAckStatus, format));
-							}
-						} else {
-							alarmReportList.add(getAlarmReportStructure(onmsAlarm, currOnmsEvent, null, format));
-						}
-					} else {
-						alarmReportList.add(getAlarmReportStructure(onmsAlarm, currOnmsEvent, null, format));
-					}
-				}
-			}
-		}
-		return alarmReportList;
-    }
-
-    public AlarmReportStructure getAlarmReportStructure(OnmsAlarm onmsAlarm, OnmsEvent onmsEvent, String[] ackStatus, ReportFormat format){
-    	
-    	// Date format for an alarm events
-	    SimpleDateFormat formater = new SimpleDateFormat("MM/dd/yy hh:mm:ss aaa",Locale.ENGLISH);
-	    
-    	AlarmReportStructure alarmJasperReportStructure = new AlarmReportStructure();
-
-    	if(onmsEvent.getAlarm()!= null){
-			if(onmsEvent.getAlarm().getId() != 0){
-				alarmJasperReportStructure.setAlarmId(onmsEvent.getAlarm().getId());
-			} else{
-				alarmJasperReportStructure.setAlarmId(0);
-			}
-		}
-
-		 try{
-			 if(onmsAlarm.getNodeLabel() != null){
-				 alarmJasperReportStructure.setNodeLabel(onmsAlarm.getNodeLabel());
-			 }else{
-				 alarmJasperReportStructure.setNodeLabel(null);
-			 }
-		 } catch(Exception e){
-			 alarmJasperReportStructure.setNodeLabel(null);
-		 }
-		 
-		alarmJasperReportStructure.setEventId(onmsEvent.getId());
-		alarmJasperReportStructure.setEventUEI(onmsEvent.getEventUei());
-
-		if(ackStatus != null){
-			alarmJasperReportStructure.setAckTime(ackStatus[0]);
-			alarmJasperReportStructure.setAckUser(ackStatus[1]);
-			alarmJasperReportStructure.setAckAction(ackStatus[2]);
-		} else {
-			alarmJasperReportStructure.setAckTime(null);
-			alarmJasperReportStructure.setAckUser(null);
-			alarmJasperReportStructure.setAckAction(null);
-		}
-		
-		if(onmsEvent.getEventCreateTime() != null){
-			alarmJasperReportStructure.setEventCreateTime(String.valueOf(formater.format(onmsEvent.getEventCreateTime())));
-		} else {
-			alarmJasperReportStructure.setEventCreateTime(null);
-		}
-		
-		if(ReportFormat.CSV == format){
-			if(onmsAlarm.getDistPoller() != null){
-				alarmJasperReportStructure.setDpName(onmsAlarm.getDistPoller().getName());
-			} else {
-				alarmJasperReportStructure.setDpName(null);
-			}
-			
-			alarmJasperReportStructure.setNodeId(onmsAlarm.getNodeId());
-			alarmJasperReportStructure.setIpAddr(InetAddressUtils.str(onmsAlarm.getIpAddr()));
-			
-			if(onmsAlarm.getServiceType() != null){
-				alarmJasperReportStructure.setServiceID(onmsAlarm.getServiceType().getId());
-			} else {
-				alarmJasperReportStructure.setServiceID(null);
-			}
-			
-			alarmJasperReportStructure.setReductionKey(onmsAlarm.getReductionKey());
-			alarmJasperReportStructure.setAlarmType(onmsAlarm.getAlarmType());
-			alarmJasperReportStructure.setCounter(onmsAlarm.getCounter());
-			alarmJasperReportStructure.setSeverity(onmsAlarm.getSeverityLabel());
-			
-			if(onmsAlarm.getLastEvent() != null){
-				alarmJasperReportStructure.setLastEventId(onmsAlarm.getLastEvent().getId());
-			} else {
-				alarmJasperReportStructure.setLastEventId(null);
-			}
-			
-			alarmJasperReportStructure.setFirstEventTime(String.valueOf(formater.format(onmsAlarm.getFirstEventTime())));
-			alarmJasperReportStructure.setLastEventTime(String.valueOf(formater.format(onmsAlarm.getLastEventTime())));
-			
-			if(onmsAlarm.getFirstAutomationTime() != null){
-				alarmJasperReportStructure.setFirstAutomationTime(String.valueOf(formater.format(onmsAlarm.getFirstAutomationTime())));
-			} else {
-				alarmJasperReportStructure.setFirstAutomationTime(null);
-			}
-			
-			if(onmsAlarm.getLastAutomationTime() != null){
-				alarmJasperReportStructure.setLastAutomationTime(String.valueOf(formater.format(onmsAlarm.getLastAutomationTime())));
-			} else {
-				alarmJasperReportStructure.setLastAutomationTime(null);
-			}
-			
-			alarmJasperReportStructure.setDescription(onmsAlarm.getDescription());
-			alarmJasperReportStructure.setLogMsg(onmsAlarm.getLogMsg());
-			alarmJasperReportStructure.setOperInstruct(onmsAlarm.getOperInstruct());
-			alarmJasperReportStructure.settTicketId(onmsAlarm.getTTicketId());
-			alarmJasperReportStructure.settTicketState(String.valueOf(onmsAlarm.getTTicketState()).trim());
-			alarmJasperReportStructure.setMouseOverText(onmsAlarm.getMouseOverText());
-			
-			if(onmsAlarm.getSuppressedUntil()!= null){
-				alarmJasperReportStructure.setSuppressedUntil(String.valueOf(formater.format(onmsAlarm.getSuppressedUntil())));
-			} else {
-				alarmJasperReportStructure.setSuppressedUntil(null);
-			}
-			
-			if(onmsAlarm.getSuppressedTime() != null){
-				alarmJasperReportStructure.setSuppressedTime(String.valueOf(formater.format(onmsAlarm.getSuppressedTime())));
-			} else {
-				alarmJasperReportStructure.setSuppressedTime(null);
-			}
-			
-			alarmJasperReportStructure.setAlarmAckUser(onmsAlarm.getAlarmAckUser());
-			
-			if(onmsAlarm.getAlarmAckTime() != null){
-				alarmJasperReportStructure.setAlarmAckTime(String.valueOf(formater.format(onmsAlarm.getAlarmAckTime())));
-			} else {
-				alarmJasperReportStructure.setAlarmAckTime(null);
-			}
-			
-			alarmJasperReportStructure.setSuppressedUser(onmsAlarm.getSuppressedUser());
-			alarmJasperReportStructure.setManagedObjectInstance(onmsAlarm.getManagedObjectInstance());
-			alarmJasperReportStructure.setManagedObjectType(onmsAlarm.getManagedObjectType());
-			alarmJasperReportStructure.setApplicationDN(onmsAlarm.getApplicationDN());
-			alarmJasperReportStructure.setOssPrimaryKey(onmsAlarm.getOssPrimaryKey());
-			alarmJasperReportStructure.setX733AlarmType(onmsAlarm.getX733AlarmType());
-			alarmJasperReportStructure.setX733ProbableCause(onmsAlarm.getX733ProbableCause());
-			alarmJasperReportStructure.setQosAlarmState(onmsAlarm.getQosAlarmState());
-			alarmJasperReportStructure.setClearKey(onmsAlarm.getClearKey());
-			alarmJasperReportStructure.setIfIndex(onmsAlarm.getIfIndex());
-			alarmJasperReportStructure.setEventParms(onmsAlarm.getEventParms());
-			
-			if(onmsAlarm.getStickyMemo() != null){
-				alarmJasperReportStructure.setStickyMemo(onmsAlarm.getStickyMemo().getBody());
-			} else {
-				alarmJasperReportStructure.setStickyMemo(null);
-			}
-			
-			if(onmsEvent.getEventTime() != null){
-				alarmJasperReportStructure.setEventTime(String.valueOf(formater.format(onmsEvent.getEventTime())));
-			} else {
-				alarmJasperReportStructure.setEventTime(null);
-			}
-			
-			alarmJasperReportStructure.setEventHost(onmsEvent.getEventHost());
-			alarmJasperReportStructure.setEventSource(onmsEvent.getEventSource());
-			
-			if(onmsEvent.getDistPoller() != null){
-				alarmJasperReportStructure.setEventDbName(onmsEvent.getDistPoller().getName());
-			} else {
-				alarmJasperReportStructure.setEventDbName(null);
-			}
-			
-			alarmJasperReportStructure.setEventSnmpHost(onmsEvent.getEventSnmpHost());
-			
-			if(onmsEvent.getServiceType() != null){
-				alarmJasperReportStructure.setEventServiceID(onmsEvent.getServiceType().getId());
-			} else {
-				alarmJasperReportStructure.setEventServiceID(null);
-			}
-			
-			alarmJasperReportStructure.setEventParms(onmsEvent.getEventParms());
-			alarmJasperReportStructure.setEventDescr(onmsEvent.getEventDescr());
-			alarmJasperReportStructure.setEventLogGroup(onmsEvent.getEventLogGroup());
-			alarmJasperReportStructure.setEventLogMsg(onmsEvent.getEventLogMsg());
-			alarmJasperReportStructure.setEventSeverity(String.valueOf(onmsEvent.getSeverityLabel()));
-			alarmJasperReportStructure.setEventPathOutage(onmsEvent.getEventPathOutage());
-			alarmJasperReportStructure.setEventCorrelation(onmsEvent.getEventCorrelation());
-			alarmJasperReportStructure.setEventSuppressedCount(onmsEvent.getEventSuppressedCount());
-			alarmJasperReportStructure.setEventOperInstruct(onmsEvent.getEventOperInstruct());
-			alarmJasperReportStructure.setEventAutoAction(onmsEvent.getEventAutoAction());
-			alarmJasperReportStructure.setEventOperAction(onmsEvent.getEventOperAction());
-			alarmJasperReportStructure.setEventOperActionMenuText(onmsEvent.getEventOperActionMenuText());
-			alarmJasperReportStructure.setEventNotification(onmsEvent.getEventNotification());
-			alarmJasperReportStructure.setEventTTicket(onmsEvent.getEventTTicket());
-			alarmJasperReportStructure.setEventTTicketState(onmsEvent.getEventTTicketState());
-			alarmJasperReportStructure.setEventForward(onmsEvent.getEventForward());
-			alarmJasperReportStructure.setEventMouseOverText(onmsEvent.getEventMouseOverText());
-			alarmJasperReportStructure.setEventLog(onmsEvent.getEventLog());
-			alarmJasperReportStructure.setEventDisplay(onmsEvent.getEventDisplay());
-			
-			if(onmsEvent.getEventAckTime() != null){
-				alarmJasperReportStructure.setEventAckTime(String.valueOf(formater.format(onmsEvent.getEventAckTime())));
-			} else {
-				alarmJasperReportStructure.setEventAckTime(null);
-			}
-			
-			alarmJasperReportStructure.setEventAckUser(onmsEvent.getEventAckUser());
-			alarmJasperReportStructure.setEventIfIndex(onmsEvent.getIfIndex());
-			
-			if(onmsEvent.getIpAddr() != null){
-				alarmJasperReportStructure.setEventIpAddr(InetAddressUtils.str(onmsEvent.getIpAddr()));
-			} else {
-				alarmJasperReportStructure.setEventIpAddr(null);
-			}
-    	}
-    	return alarmJasperReportStructure;
-    }
-    
-    public boolean getDuplicateIdStatus(OnmsEvent onmsEvent, int currEventAlarmId, int eventIterator){
-		if(onmsEvent.getAlarm() != null){
-			if((currEventAlarmId == onmsEvent.getAlarm().getId()) && currEventAlarmId != 0){
-				return true;
-			}
-		}
-    	return false;
-    }
-    
-    public List<OnmsEvent> getEvents(HashMap<Integer, List<Integer>> eventIdsForAlarms , Integer alarmId){
-    	List<OnmsEvent> onmsEventList= new ArrayList<OnmsEvent>();
-    	for(Integer eventId : eventIdsForAlarms.get(alarmId)){
-    		OnmsEvent onmsEvent = m_eventDao.get(eventId);
-    		onmsEventList.add(onmsEvent);
-    	}
-    	return onmsEventList;
-    }
-    
-    public List<OnmsAcknowledgment> getAcknowledgments(int alarmId) {
-        CriteriaBuilder cb = new CriteriaBuilder(OnmsAcknowledgment.class);
-        cb.eq("refId", alarmId);
-        cb.eq("ackType", AckType.ALARM);
-        return m_ackDao.findMatching(cb.toCriteria());
-    }
-    
-    public Calendar getDateFormat(Date date){
-    	Calendar calendar = Calendar.getInstance();  
-    	calendar.setTime(date);
-    	Calendar calDate = new GregorianCalendar(calendar.get(Calendar.YEAR),calendar.get(Calendar.MONTH),
-    			calendar.get(Calendar.DAY_OF_MONTH),calendar.get(Calendar.HOUR_OF_DAY),calendar.get(Calendar.MINUTE),calendar.get(Calendar.SECOND));
-    	return calDate;
-    }
-
-    public void setGlobalReportRepository(final GlobalReportRepository globalReportRepository) {
-        m_globalReportRepository = globalReportRepository;
+        return null;
     }
 }
