@@ -1,22 +1,22 @@
 /*******************************************************************************
  * This file is part of OpenNMS(R).
  *
- * Copyright (C) 2006-2012 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2012 The OpenNMS Group, Inc.
+ * Copyright (C) 2012-2014 The OpenNMS Group, Inc.
+ * OpenNMS(R) is Copyright (C) 1999-2014 The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
+ * it under the terms of the GNU Affero General Public License as published
  * by the Free Software Foundation, either version 3 of the License,
  * or (at your option) any later version.
  *
  * OpenNMS(R) is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Affero General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
+ * You should have received a copy of the GNU Affero General Public License
  * along with OpenNMS(R).  If not, see:
  *      http://www.gnu.org/licenses/
  *
@@ -25,29 +25,28 @@
  *     http://www.opennms.org/
  *     http://www.opennms.com/
  *******************************************************************************/
-package org.opennms.features.vaadin.datacollection;
 
-import java.util.ArrayList;
+package org.opennms.features.vaadin.datacollection;
 
 import org.opennms.features.vaadin.api.OnmsBeanContainer;
 import org.opennms.netmgt.config.datacollection.Rrd;
 import org.vaadin.dialogs.ConfirmDialog;
 
-import com.vaadin.data.Container;
-import com.vaadin.data.util.converter.StringToDoubleConverter;
-import com.vaadin.data.util.converter.StringToIntegerConverter;
+import com.vaadin.v7.data.Container;
+import com.vaadin.v7.data.util.converter.StringToDoubleConverter;
+import com.vaadin.v7.data.util.converter.StringToIntegerConverter;
 import com.vaadin.ui.Alignment;
 import com.vaadin.ui.Button;
-import com.vaadin.ui.ComboBox;
+import com.vaadin.v7.ui.ComboBox;
 import com.vaadin.ui.Component;
-import com.vaadin.ui.CustomField;
-import com.vaadin.ui.DefaultFieldFactory;
-import com.vaadin.ui.Field;
-import com.vaadin.ui.HorizontalLayout;
+import com.vaadin.v7.ui.CustomField;
+import com.vaadin.v7.ui.DefaultFieldFactory;
+import com.vaadin.v7.ui.Field;
+import com.vaadin.v7.ui.HorizontalLayout;
 import com.vaadin.ui.Notification;
-import com.vaadin.ui.Table;
-import com.vaadin.ui.TextField;
-import com.vaadin.ui.VerticalLayout;
+import com.vaadin.v7.ui.Table;
+import com.vaadin.v7.ui.TextField;
+import com.vaadin.v7.ui.VerticalLayout;
 
 /**
  * The RRD Field.
@@ -91,8 +90,7 @@ public class RrdField extends CustomField<Rrd> implements Button.ClickListener {
         table.setEditable(!isReadOnly());
         table.setSelectable(true);
         table.setImmediate(true);
-        table.setHeight("125px");
-        table.setWidth("100%");
+        table.setSizeFull();
         table.setTableFieldFactory(new DefaultFieldFactory() {
             @Override
             public Field<?> createField(Container container, Object itemId, Object propertyId, Component uiContext) {
@@ -169,18 +167,16 @@ public class RrdField extends CustomField<Rrd> implements Button.ClickListener {
      */
     @Override
     protected void setInternalValue(Rrd rrd) {
-        super.setInternalValue(rrd); // TODO Is this required ?
         boolean stepState = step.isReadOnly();
         step.setReadOnly(false);
         step.setValue(rrd.getStep().toString());
-        if (stepState)
+        if (stepState) {
             step.setReadOnly(true);
-        ArrayList<RRA> rras = new ArrayList<RRA>();
-        for (String rra : rrd.getRraCollection()) {
-            rras.add(new RRA(rra));
         }
         container.removeAllItems();
-        container.addAll(rras);
+        for (String rra : rrd.getRras()) {
+            container.addOnmsBean(new RRA(rra));
+        }
     }
 
     /* (non-Javadoc)
@@ -190,12 +186,12 @@ public class RrdField extends CustomField<Rrd> implements Button.ClickListener {
     protected Rrd getInternalValue() {
         Rrd rrd = new Rrd();
         try {
-            rrd.setStep(new Integer((String) step.getValue()));
+            rrd.setStep(Integer.valueOf((String) step.getValue()));
         } catch (NumberFormatException e) {
             rrd.setStep(null);
         }
-        for (Object itemId: container.getItemIds()) {
-            rrd.addRra(container.getItem(itemId).getBean().getRra());
+        for (RRA rra: container.getOnmsBeans()) {
+            rrd.addRra(rra.getRra());
         }
         return rrd;
     }
@@ -260,4 +256,13 @@ public class RrdField extends CustomField<Rrd> implements Button.ClickListener {
         }
     }
 
+    /**
+     * Gets the step value.
+     *
+     * @return the step value
+     */
+    public Integer getStepValue() {
+        final String value = step.getValue();
+        return value == null ? null : Integer.valueOf(value);
+    }
 }
