@@ -1,22 +1,22 @@
 /*******************************************************************************
  * This file is part of OpenNMS(R).
  *
- * Copyright (C) 2009-2012 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2012 The OpenNMS Group, Inc.
+ * Copyright (C) 2009-2017 The OpenNMS Group, Inc.
+ * OpenNMS(R) is Copyright (C) 1999-2017 The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
+ * it under the terms of the GNU Affero General Public License as published
  * by the Free Software Foundation, either version 3 of the License,
  * or (at your option) any later version.
  *
  * OpenNMS(R) is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Affero General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
+ * You should have received a copy of the GNU Affero General Public License
  * along with OpenNMS(R).  If not, see:
  *      http://www.gnu.org/licenses/
  *
@@ -70,8 +70,6 @@ public class AsteriskOriginator {
     // private static final String DEFAULT_LEGB_APP_DATA = "tt-monkeysintro";
 
     private DefaultManagerConnection m_managerConnection = null;
-    private OriginateAction m_originateAction = null;
-    private ManagerResponse m_managerResponse = null;
 
     /*
      * properties from configuration
@@ -115,25 +113,25 @@ public class AsteriskOriginator {
      * @param amiProps a {@link java.util.Properties} object.
      * @throws org.opennms.netmgt.asterisk.utils.AsteriskOriginatorException if any.
      */
-    public AsteriskOriginator(Properties amiProps) throws AsteriskOriginatorException {
+    public AsteriskOriginator(final Properties amiProps) throws AsteriskOriginatorException {
         
         try {
             configureProperties(amiProps);
-        } catch (IOException e) {
+        } catch (final IOException e) {
             throw new AsteriskOriginatorException("Failed to construct originator", e);
         }
         
         // Get the details for this AMI peer from the AmiPeerFactory
         try {
             AmiPeerFactory.init();
-        } catch (IOException ioe) {
+        } catch (final IOException ioe) {
             throw new AsteriskOriginatorException("I/O error initializing AMI peer factory", ioe);
         }
         
-        AmiAgentConfig agentConfig = AmiPeerFactory.getInstance().getAgentConfig(m_amiHost);
+        final AmiAgentConfig agentConfig = AmiPeerFactory.getInstance().getAgentConfig(m_amiHost);
         // Now create and configure the manager connection
-        ManagerConnectionFactory mcf = new ManagerConnectionFactory(InetAddressUtils.str(m_amiHost), agentConfig.getPort(), agentConfig.getUsername(), agentConfig.getPassword());
-        if (agentConfig.getUseTls()) {
+        final ManagerConnectionFactory mcf = new ManagerConnectionFactory(InetAddressUtils.str(m_amiHost), agentConfig.getPort().orElse(null), agentConfig.getUsername().orElse(null), agentConfig.getPassword().orElse(null));
+        if (agentConfig.getUseTls().orElse(false)) {
             m_managerConnection = (DefaultManagerConnection)mcf.createSecureManagerConnection();
         } else {
             m_managerConnection = (DefaultManagerConnection)mcf.createManagerConnection();
@@ -160,7 +158,7 @@ public class AsteriskOriginator {
      * @throws IOException
      */
     
-    private void configureProperties(Properties amiProps) throws IOException {
+    private void configureProperties(final Properties amiProps) throws IOException {
         
         //this loads the OpenNMS-defined properties
         m_amiProps = AsteriskConfig.getProperties();
@@ -179,11 +177,11 @@ public class AsteriskOriginator {
         m_dialTimeout = PropertiesUtils.getProperty(m_amiProps, "org.opennms.asterisk.originate.legadialtimeout", DEFAULT_LEGA_TIMEOUT);
         m_legBContext = PropertiesUtils.getProperty(m_amiProps, "org.opennms.asterisk.originate.legbcontext", DEFAULT_LEGB_CONTEXT);
         m_legBExtension = PropertiesUtils.getProperty(m_amiProps, "org.opennms.asterisk.originate.legbextension", DEFAULT_LEGB_EXTENSION);
-        String legBPriorityStr = PropertiesUtils.getProperty(m_amiProps, "org.opennms.asterisk.originate.legbpriority", new Integer(DEFAULT_LEGB_PRIORITY).toString());
+        String legBPriorityStr = PropertiesUtils.getProperty(m_amiProps, "org.opennms.asterisk.originate.legbpriority", Integer.valueOf(DEFAULT_LEGB_PRIORITY).toString());
         m_legBPriority = Integer.parseInt(legBPriorityStr);
         m_legBAppPattern = PropertiesUtils.getProperty(m_amiProps, "org.opennms.asterisk.originate.legbapp", null);
         m_legBAppDataPattern = PropertiesUtils.getProperty(m_amiProps, "org.opennms.asterisk.originate.legbappdata", null);
-        m_legBIsApp = (m_legBAppPattern != null && ! "".equals(m_legBAppPattern));
+        m_legBIsApp = (m_legBAppPattern != null && ! "".equals(m_legBAppPattern.trim()));
     }
 
     /**
@@ -192,48 +190,49 @@ public class AsteriskOriginator {
      * @throws org.opennms.netmgt.asterisk.utils.AsteriskOriginatorException if any.
      */
     public void originateCall() throws AsteriskOriginatorException {
-        m_originateAction = buildOriginateAction();
+        OriginateAction originateAction = buildOriginateAction();
         
         LOG.info("Logging in Asterisk manager connection");
         try {
             m_managerConnection.login();
-        } catch (IllegalStateException ise) {
+        } catch (final IllegalStateException ise) {
             throw new AsteriskOriginatorException("Illegal state logging in Asterisk manager connection", ise);
-        } catch (IOException ioe) {
+        } catch (final IOException ioe) {
             throw new AsteriskOriginatorException("I/O exception logging in Asterisk manager connection", ioe);
-        } catch (AuthenticationFailedException afe) {
+        } catch (final AuthenticationFailedException afe) {
             throw new AsteriskOriginatorException("Authentication failure logging in Asterisk manager connection", afe);
-        } catch (TimeoutException toe) {
+        } catch (final TimeoutException toe) {
             throw new AsteriskOriginatorException("Timed out logging in Asterisk manager connection", toe);
         }
         LOG.info("Successfully logged in Asterisk manager connection");
-        
+
         LOG.info("Originating a call to extension {}", m_legAExtension);
         LOG.debug(createCallLogMsg());
-        LOG.debug("Originate action:\n\n{}", m_originateAction.toString());
+        LOG.debug("Originate action:\n\n{}", originateAction.toString());
         
+        ManagerResponse managerResponse = null;
         try {
-            m_managerResponse = m_managerConnection.sendAction(m_originateAction);
-        } catch (IllegalArgumentException iae) {
+            managerResponse = m_managerConnection.sendAction(originateAction);
+        } catch (final IllegalArgumentException iae) {
             m_managerConnection.logoff();
             throw new AsteriskOriginatorException("Illegal argument sending originate action", iae);
-        } catch (IllegalStateException ise) {
+        } catch (final IllegalStateException ise) {
             m_managerConnection.logoff();
             throw new AsteriskOriginatorException("Illegal state sending originate action", ise);
-        } catch (IOException ioe) {
+        } catch (final IOException ioe) {
             m_managerConnection.logoff();
             throw new AsteriskOriginatorException("I/O exception sending originate action", ioe);
-        } catch (TimeoutException toe) {
+        } catch (final TimeoutException toe) {
             m_managerConnection.logoff();
             throw new AsteriskOriginatorException("Timed out sending originate action", toe);
         }
         
-        LOG.info("Asterisk manager responded: {}", m_managerResponse.getResponse());
-        LOG.info("Asterisk manager message: {}", m_managerResponse.getMessage());
+        LOG.info("Asterisk manager responded: {}", managerResponse.getResponse());
+        LOG.info("Asterisk manager message: {}", managerResponse.getMessage());
         
-        if (m_managerResponse.getResponse().toLowerCase().startsWith("error")) {
+        if (managerResponse.getResponse().toLowerCase().startsWith("error")) {
             m_managerConnection.logoff();
-            throw new AsteriskOriginatorException("Got error response sending originate event. Response: " + m_managerResponse.getResponse() + "; Message: " + m_managerResponse.getMessage());
+            throw new AsteriskOriginatorException("Got error response sending originate event. Response: " + managerResponse.getResponse() + "; Message: " + managerResponse.getMessage());
         }
         
         LOG.info("Logging off Asterisk manager connection");
@@ -248,7 +247,7 @@ public class AsteriskOriginator {
      * @throws org.opennms.netmgt.asterisk.utils.AsteriskOriginatorException if any of the underlying operations fail
      */
     public OriginateAction buildOriginateAction() throws AsteriskOriginatorException {
-        OriginateAction action = new OriginateAction();
+        final OriginateAction action = new OriginateAction();
         action.setCallerId(m_callerId);
         setLegAChannel(expandPattern(m_legAChannelPattern));
         action.setChannel(getLegAChannel());
@@ -266,14 +265,15 @@ public class AsteriskOriginator {
         return action;
     }
 
-    private String expandPattern(String pattern) {
+    private String expandPattern(final String pattern) {
         LOG.debug("Expanding pattern {}", pattern);
-        String expanded = AsteriskUtils.expandPattern(pattern);
         
         // Further expand AsteriskOriginator-specific tokens
-        Properties props = new Properties();
+        final Properties props = new Properties();
         props.put("exten", getLegAExtension());
-        expanded = PropertiesUtils.substitute(expanded, props);
+
+        final String expanded = PropertiesUtils.substitute(AsteriskUtils.expandPattern(pattern), props);
+
         LOG.debug("Expanded pattern is: {}", expanded);
         return expanded;
     }
@@ -282,7 +282,7 @@ public class AsteriskOriginator {
      * @return
      */
     private String createCallLogMsg() {
-        StringBuffer sb = new StringBuffer();
+        final StringBuilder sb = new StringBuilder();
         sb.append("\n\tChannel: ");
         sb.append(getLegAChannel());
         sb.append("\n\tFrom Caller-ID: ");
@@ -322,7 +322,7 @@ public class AsteriskOriginator {
      *
      * @param cid The from address to set.
      */
-    public void setCallerId(String cid) {
+    public void setCallerId(final String cid) {
         m_callerId = cid;
     }
 
@@ -341,7 +341,7 @@ public class AsteriskOriginator {
      * @param amiHost Sets the mail host.
      * @throws java.net.UnknownHostException if any.
      */
-    public void setAmiHost(String amiHost) throws UnknownHostException {
+    public void setAmiHost(final String amiHost) throws UnknownHostException {
         m_amiHost = InetAddressUtils.addr(amiHost);
     }
 
@@ -360,7 +360,7 @@ public class AsteriskOriginator {
      * @param messageText
      *            Sets the message text.
      */
-    public void setMessageText(String messageText) {
+    public void setMessageText(final String messageText) {
         m_messageText = messageText;
     }
 
@@ -379,7 +379,7 @@ public class AsteriskOriginator {
      * @param subject
      *            Sets the message Subject.
      */
-    public void setSubject(String subject) {
+    public void setSubject(final String subject) {
         m_subject = subject;
     }
 
@@ -397,7 +397,7 @@ public class AsteriskOriginator {
      *
      * @param exten Sets the extension for Leg A
      */
-    public void setLegAExtension(String exten) {
+    public void setLegAExtension(final String exten) {
         m_legAExtension = exten;
     }
 
@@ -413,9 +413,9 @@ public class AsteriskOriginator {
     /**
      * <p>setLegAChannel</p>
      *
-     * @param chan Sets the channelfor Leg A
+     * @param chan Sets the channel for Leg A
      */
-    public void setLegAChannel(String chan) {
+    public void setLegAChannel(final String chan) {
         m_legAChannel = chan;
     }
 
@@ -433,7 +433,7 @@ public class AsteriskOriginator {
      *
      * @param debug a boolean.
      */
-    public void setDebug(boolean debug) {
+    public void setDebug(final boolean debug) {
         m_debug = debug;
     }
 
@@ -452,7 +452,7 @@ public class AsteriskOriginator {
      * @param name Name of variable to set
      * @param value Value to set for variable
      */
-    public void setChannelVariable(String name, String value) {
+    public void setChannelVariable(final String name, final String value) {
         m_channelVars.put(name, value);
     }
     
@@ -471,7 +471,7 @@ public class AsteriskOriginator {
      * @param name Name of variable to retrieve
      * @return Value of named variable
      */
-    public String getChannelVariable(String name) {
+    public String getChannelVariable(final String name) {
         if (name == null || "".equals(name)) {
             return null;
         }
