@@ -1,22 +1,22 @@
 /*******************************************************************************
  * This file is part of OpenNMS(R).
  *
- * Copyright (C) 2008-2012 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2012 The OpenNMS Group, Inc.
+ * Copyright (C) 2006-2014 The OpenNMS Group, Inc.
+ * OpenNMS(R) is Copyright (C) 1999-2014 The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
+ * it under the terms of the GNU Affero General Public License as published
  * by the Free Software Foundation, either version 3 of the License,
  * or (at your option) any later version.
  *
  * OpenNMS(R) is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Affero General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
+ * You should have received a copy of the GNU Affero General Public License
  * along with OpenNMS(R).  If not, see:
  *      http://www.gnu.org/licenses/
  *
@@ -30,7 +30,8 @@ package org.opennms.netmgt.dao.support;
 
 import java.util.StringTokenizer;
 
-import org.opennms.netmgt.config.collector.CollectionResource;
+import org.opennms.netmgt.collection.api.CollectionResource;
+import org.opennms.netmgt.collection.support.IndexStorageStrategy;
 
 /**
  * This class use the new implementation of SnmpStorageStrategy extending the new
@@ -45,7 +46,7 @@ public class FrameRelayStorageStrategy extends IndexStorageStrategy {
     public String getResourceNameFromIndex(CollectionResource resource) {
         StringTokenizer indexes = new StringTokenizer(resource.getInstance(), ".");
         String ifIndex = indexes.nextToken();
-        String ifName = getInterfaceName(resource.getParent(), ifIndex);
+        String ifName = getInterfaceName(resource.getParent().getName(), ifIndex);
         String dlci = indexes.nextToken();
         return ifName + "." + dlci;
     }
@@ -58,7 +59,7 @@ public class FrameRelayStorageStrategy extends IndexStorageStrategy {
      * @return a {@link java.lang.String} object.
      */
     public String getInterfaceName(String nodeId, String ifIndex) {
-       String label = m_storageStrategyService.getSnmpInterfaceLabel(new Integer(ifIndex));
+       String label = m_storageStrategyService.getSnmpInterfaceLabel(Integer.valueOf(ifIndex));
        return label != null ? label : ifIndex;
     }
 
