@@ -1,22 +1,22 @@
 /*******************************************************************************
  * This file is part of OpenNMS(R).
  *
- * Copyright (C) 2010-2012 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2012 The OpenNMS Group, Inc.
+ * Copyright (C) 2010-2014 The OpenNMS Group, Inc.
+ * OpenNMS(R) is Copyright (C) 1999-2014 The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
+ * it under the terms of the GNU Affero General Public License as published
  * by the Free Software Foundation, either version 3 of the License,
  * or (at your option) any later version.
  *
  * OpenNMS(R) is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Affero General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
+ * You should have received a copy of the GNU Affero General Public License
  * along with OpenNMS(R).  If not, see:
  *      http://www.gnu.org/licenses/
  *
@@ -116,7 +116,7 @@ public class SupportController extends AbstractController implements Initializin
         String body = request.getParameter("text").trim();
         final String includeReport = request.getParameter("include-report");
         final boolean report  = Boolean.parseBoolean(includeReport);
-        LOG.debug("include report?: {} (parsed as {})", includeReport, new Boolean(report));
+        LOG.debug("include report?: {} (parsed as {})", includeReport, Boolean.valueOf(report));
 
         final RTUser user = rt.getUserInfo(rt.getUsername());
 
@@ -156,7 +156,7 @@ public class SupportController extends AbstractController implements Initializin
         results.setUsername(rt.getUsername());
         results.setQueue(queue.getName());
 
-        List<CustomField> customFields = new ArrayList<CustomField>();
+        List<CustomField> customFields = new ArrayList<>();
         customFields.add(new CustomField(m_configDao.getVersionFieldName(), "Version " + Vault.getProperty("version.display"), false));
         customFields.add(new CustomField(m_configDao.getOSFieldName(), System.getProperty("os.name")+" "+System.getProperty("os.version")+" ("+System.getProperty("os.arch")+")", false));
         
@@ -177,7 +177,8 @@ public class SupportController extends AbstractController implements Initializin
         final String username = request.getParameter("username").trim();
         final String password = request.getParameter("password").trim();
 
-        final RequestTracker rt = new RequestTracker(m_configDao.getBaseURL(), username, password, m_configDao.getTimeout(), m_configDao.getRetry());
+        final RequestTracker rt = new RequestTracker(m_configDao.getBaseURL(), username, password, m_configDao.getTimeout(),
+                m_configDao.getRetry(), m_configDao.getUseSystemProxy());
         LOG.debug("tracker = {}", rt);
 
         final SupportResults results = new SupportResults();
